--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>指尖竞技</title>
+  <title>ksleo</title>
 </head>
 <body>
   <div id="app"></div>
+  <!-- <script src='119.29.146.210/china.js'></script> -->
 </body>
 </html>
